--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "chrome-extension-webpack",
+  "name": "tabs-later",
   "version": "0.0.1",
-  "description": "A boilerplate to chrome extension with webpack",
+  "author": "Billy Chan",
+  "description": "Tabs Later chrome extension to organize tabs",
   "scripts": {
     "build": "node utils/build.js",
     "start": "node utils/webserver.js"
