TL-2 display chrome tabs

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,6 +8,10 @@
     "default_popup": "popup.html",
     "default_icon": "icon-34.png"
   },
+  "permissions": [
+    "tabs",
+    "storage"
+  ],
   "icons": {
     "128": "icon-128.png"
   },
