--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "node utils/webserver.js"
   },
   "dependencies": {
+    "babel-eslint": "^10.0.1",
+    "node-sass": "^4.10.0",
     "react": "^16.7.0-alpha.0",
-    "react-dom": "^16.7.0-alpha.0"
+    "react-dom": "^16.7.0-alpha.0",
+    "react-hot-loader": "^4.4.0",
+    "sass-loader": "^7.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.17.0",
@@ -35,7 +39,6 @@
     "fs-extra": "^0.30.0",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "2.24.1",
-    "react-hot-loader": "^4.0.1",
     "style-loader": "^0.13.0",
     "webpack": "2.2.1",
     "webpack-dev-server": "^2.3.0",
