--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "node utils/webserver.js"
   },
   "dependencies": {
+    "@blueprintjs/core": "^3.9.0",
+    "@blueprintjs/icons": "^3.3.0",
     "babel-eslint": "^10.0.1",
     "node-sass": "^4.10.0",
     "react": "^16.7.0-alpha.0",
