--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,14 +6,14 @@
   },
   "browser_action": {
     "default_popup": "popup.html",
-    "default_icon": "icon-34.png"
+    "default_icon": "src/img/icon-34.png"
   },
   "permissions": [
     "tabs",
     "storage"
   ],
   "icons": {
-    "128": "icon-128.png"
+    "128": "src/img/icon-128.png"
   },
   "manifest_version": 2,
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
