--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,5 @@
   "presets": [
     "react"
   ],
-  "plugins": ["react-hot-loader/babel"]
+  "plugins": ["react-hot-loader/babel", "transform-object-rest-spread"]
 }
