--- a/package.json
+++ b/package.json
@@ -5,21 +5,23 @@
   "description": "Tabs Later chrome extension to organize tabs",
   "scripts": {
     "build": "node utils/build.js",
-    "start": "node utils/webserver.js"
+    "start": "node utils/webserver.js",
+    "eslint": "node ./node_modules/.bin/"
   },
   "dependencies": {
     "@blueprintjs/core": "^3.9.0",
     "@blueprintjs/icons": "^3.3.0",
-    "babel-eslint": "^10.0.1",
     "node-sass": "^4.10.0",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
-    "react-hot-loader": "^4.4.0",
-    "sass-loader": "^7.1.0"
+    "react-hot-loader": "^4.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.17.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-react": "^6.16.0",
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.2.0",
@@ -41,6 +43,7 @@
     "fs-extra": "^0.30.0",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "2.24.1",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.13.0",
     "webpack": "2.2.1",
     "webpack-dev-server": "^2.3.0",
