--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "prop-types": "^15.6.2",
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
-    "react-hot-loader": "^4.4.0"
+    "react-hot-loader": "^4.4.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.17.0",
