--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@blueprintjs/icons": "^3.3.0",
     "classnames": "^2.2.6",
     "node-sass": "^4.10.0",
+    "node-uuid": "^1.4.8",
     "normalizr": "^3.3.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0-alpha.0",
