TL-11 Save list to db and fetch on start

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,7 +10,7 @@
   },
   "permissions": [
     "tabs",
-    "storage"
+    "unlimitedStorage"
   ],
   "icons": {
     "128": "src/img/icon-128.png"
