--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^4.10.0",
     "node-uuid": "^1.4.8",
     "normalizr": "^3.3.0",
+    "pouchdb": "^7.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
