--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@blueprintjs/core": "^3.11.0",
     "@blueprintjs/icons": "^3.3.0",
     "classnames": "^2.2.6",
+    "fuse.js": "^3.4.3",
+    "lodash": "^4.17.11",
     "node-sass": "^4.10.0",
     "node-uuid": "^1.4.8",
     "normalizr": "^3.3.0",
