--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
-  "presets": [
-    "react"
-  ],
-  "plugins": ["react-hot-loader/babel", "transform-object-rest-spread"]
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": [
+    "@babel/plugin-proposal-object-rest-spread"
+  ]
 }
