--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@blueprintjs/icons": "^3.3.0",
     "classnames": "^2.2.6",
     "fuse.js": "^3.4.3",
+    "lodash": "^4.17.11",
     "node-uuid": "^1.4.8",
     "normalizr": "^3.3.0",
     "pouchdb": "^7.0.0",
