--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "postcss-scss": "^2.0.0",
     "precss": "^4.0.0",
     "style-loader": "^0.23.1",
+    "stylelint-config-recommended": "^2.2.0",
+    "tailwindcss": "^1.0.0-beta.8",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.3.1",
