TL-44 Update React, Redux, react-redux, Blueprintjs etc to latest

--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "eslint": "node ./node_modules/.bin/eslint"
   },
   "dependencies": {
-    "@blueprintjs/core": "^3.11.0",
-    "@blueprintjs/icons": "^3.3.0",
+    "@blueprintjs/core": "^3.17.1",
+    "@blueprintjs/icons": "^3.9.1",
     "classnames": "^2.2.6",
     "fuse.js": "^3.4.3",
     "lodash": "^4.17.11",
     "node-uuid": "^1.4.8",
     "normalizr": "^3.3.0",
-    "pouchdb": "^7.0.0",
+    "pouchdb": "^7.1.1",
     "prop-types": "^15.6.2",
-    "react": "^16.7.0-alpha.0",
-    "react-dom": "^16.7.0-alpha.0",
-    "react-hot-loader": "^4.4.0",
-    "react-redux": "^6.0.0",
-    "redux": "^4.0.1",
-    "redux-logger": "^3.0.6",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-hot-loader": "^4.12.10",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-logger": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
