--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@babel/core": "^7.3.0",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.5",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.5",
@@ -58,9 +60,12 @@
     "postcss-loader": "^3.0.0",
     "postcss-scss": "^2.0.0",
     "precss": "^4.0.0",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "stylelint-config-recommended": "^2.2.0",
     "tailwindcss": "^1.0.0-beta.8",
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.5.3",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.3.1",
