--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.10",
     "react-redux": "^7.1.0",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "redux-logger": "^4.0.0",
     "redux-thunk": "^2.3.0"
@@ -40,6 +42,7 @@
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.5",
     "@types/react-redux": "^7.1.1",
+    "@types/react-router-dom": "^4.3.4",
     "@types/redux-logger": "^3.0.7",
     "@types/redux-thunk": "^2.1.0",
     "babel-eslint": "^10.0.1",
