TL-47 Basic build command for production

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tabs-later",
   "version": "0.0.1",
   "author": "Billy Chan",
-  "description": "Tabs Later chrome extension to organize tabs",
+  "description": "Save and organize Chrome tabs by lists ",
   "scripts": {
     "build": "NODE_ENV=production ./node_modules/.bin/webpack",
     "start": "./node_modules/.bin/webpack-dev-server --content-base ./build",
@@ -51,6 +51,7 @@
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^5.0.3",
+    "css-loader": "^3.2.0",
     "eslint": "^5.2.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^2.9.0",
@@ -68,7 +69,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.5.0",
-    "mini-css-extract-plugin": "^0.6.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-scss": "^2.0.0",
