--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/core": "^7.3.0",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "@fullhuman/postcss-purgecss": "^1.2.0",
     "@types/classnames": "^2.2.9",
     "@types/lodash": "^4.14.136",
     "@types/node-uuid": "^0.0.28",
