--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.5.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-scss": "^2.0.0",
@@ -79,6 +80,7 @@
     "style-loader": "^0.23.1",
     "stylelint-config-recommended": "^2.2.0",
     "tailwindcss": "^1.0.0-beta.8",
+    "terser-webpack-plugin": "^1.4.1",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
     "webpack": "^4.30.0",
